@@ -22,18 +22,14 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 83)
-(Parent-Version lpmud 3-3 82)
-(Version-Log "Corrected a bug regarding duplication of shared strings.
-Destructing the target of a singular shadow crashed the driver.
-Efuns object_name() and load_name() now accept 0 as argument.
-Calls to an alien-lfun no longer create a duplicate control frame.
-For the first 255 simul efuns it is now permissible to receive reference
-parameters in a varargs parameter.
-Improved the recognition of mySQL support.")
+(Project-Version lpmud 3-3 84)
+(Parent-Version lpmud 3-3 83)
+(Version-Log "Efun program_name() accepts 0 as argument.
+Efuns ceil() and floor() also accept integer arguments.
+The recognition of numeric character constants was slightly wrong.")
 (New-Version-Log
 "")
-(Checkin-Time "Sun, 05 Aug 2001 22:12:55 -0600")
+(Checkin-Time "Tue, 07 Aug 2001 21:44:28 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -66,8 +62,8 @@ Improved the recognition of mySQL support.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.3 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.23 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.146 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.193 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.147 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.194 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.13 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -134,7 +130,7 @@ Improved the recognition of mySQL support.")
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.4 644))
   (src/ed.c (lpmud/c/33_ed.c 1.32.1.13 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.9 644))
-  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.33 644))
+  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.34 644))
   (src/exec.h (lpmud/c/32_exec.h 1.34.1.12 644))
   (src/files.h (lpmud/I/49_files.h 1.1 644))
   (src/files.c (lpmud/I/50_files.c 1.10 644))
@@ -148,7 +144,7 @@ Improved the recognition of mySQL support.")
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.19 644))
   (src/interpret.c (lpmud/b/14_interpret. 1.125.1.72 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.8 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.52 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.53 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.5 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.36 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.8 644))
@@ -162,7 +158,7 @@ Improved the recognition of mySQL support.")
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/object.h (lpmud/44_object.h 1.34.1.8 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.35 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.36 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.3 644))
   (src/parser.c (lpmud/L/13_parser.c 1.1 644))
@@ -210,7 +206,7 @@ Improved the recognition of mySQL support.")
   (src/xalloc.c (lpmud/H/0_xalloc.c 1.2.1.1 644))
 
   ;; Build files
-  (src/func_spec (lpmud/c/31_func_spec 1.53.1.35 644))
+  (src/func_spec (lpmud/c/31_func_spec 1.53.1.36 644))
   (src/string_spec (lpmud/F/6_string_spe 1.14 644))
   (src/mkfunc.c (lpmud/L/14_mkfunc.c 1.1 644))
   (src/make_func.y (lpmud/b/7_make_func. 1.25.1.18 644))
@@ -759,7 +755,7 @@ Improved the recognition of mySQL support.")
   (doc/efun/capitalize (lpmud/o/11_capitalize 1.3 644))
   (doc/efun/cat (lpmud/o/12_cat 1.2 644))
   (doc/efun/catch (lpmud/o/13_catch 1.1.1.3 644))
-  (doc/efun/ceil (lpmud/C/40_ceil 1.2 644))
+  (doc/efun/ceil (lpmud/C/40_ceil 1.3 644))
   (doc/efun/clear_bit (lpmud/o/15_clear_bit 1.4 644))
   (doc/efun/closurep (lpmud/o/16_closurep 1.3 644))
   (doc/efun/clone_object (lpmud/l/6_clone_obje 1.13 644))
@@ -810,7 +806,7 @@ Improved the recognition of mySQL support.")
   (doc/efun/find_object (lpmud/o/40_find_objec 1.1.1.1 644))
   (doc/efun/first_inventory (lpmud/o/42_first_inve 1.3 644))
   (doc/efun/floatp (lpmud/o/43_floatp 1.3 644))
-  (doc/efun/floor (lpmud/C/41_floor 1.2 644))
+  (doc/efun/floor (lpmud/C/41_floor 1.3 644))
   (doc/efun/funcall (lpmud/o/44_funcall 1.4 644))
   (doc/efun/function_exists (lpmud/o/45_function_e 1.3.1.1 644))
   (doc/efun/functionlist (lpmud/o/46_functionli 1.2.1.1 644))
@@ -878,7 +874,7 @@ Improved the recognition of mySQL support.")
   (doc/efun/previous_object (lpmud/l/34_previous_o 1.3.1.3 644))
   (doc/efun/printf (lpmud/p/22_printf 1.3 644))
   (doc/efun/process_string (lpmud/p/23_process_st 1.4 644))
-  (doc/efun/program_name (lpmud/m/10_program_na 1.5 644))
+  (doc/efun/program_name (lpmud/m/10_program_na 1.6 644))
   (doc/efun/program_time (lpmud/m/17_program_ti 1.3 644))
   (doc/efun/query_actions (lpmud/p/24_query_acti 1.1.1.1 644))
   (doc/efun/query_command (lpmud/D/8_query_comm 1.3 644))
