@@ -45,13 +45,14 @@ For a detailed list of all changes see the file CHANGELOG.
     - Other Changes:
 
 
-05-Aug-2001 (Lars Duening) -- upcoming Release 3.2.9
+06-Aug-2001 (Lars Duening) -- upcoming Release 3.2.9
 
     - Changed efuns:
        + add_action(): New flag AA_IMM_ARGS implements the sane NOSPACE
            handling.
        + allocate(): Accepts an optional initialisation value and can
            create multi-dimensional arrays.
+       + ceil(), floor(): Also accept integer argument values.
        + clones(): If the driver is compiled with DYNAMIC_COSTS, the cost
            is proportional to the number of objects in the game.
        + ctime(): Accepts the output of new efun utime() as well.
@@ -72,8 +73,8 @@ For a detailed list of all changes see the file CHANGELOG.
             (e.g. &(i[0])) are not allowed as callback parameters.
        + lambda(): Simul efuns with extended varargs weren't compiled
             correctly.
-       + load_name(), object_name(): 0 is now accepted as argument, the
-            efuns returns 0 in that case.
+       + load_name(), object_name(), program_name(): 0 is now accepted
+            as argument, the efuns returns 0 in that case.
        + object_info(): OINFO_MEMORY also returns the program flags
            NO_INHERIT, NO_SHADOW and NO_CLONE, and gives a better account
            of the memory used for strings and variables.
